# ml_sentimenal_analysis

./: ..dockerignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  test_app_batch.py  test_batch.py  test_k8s_batch.py  test_k8s_hpa.py  test_k8s_local.py  test_k8s_single.py  test_serverless_batch.py  test_serverless_single.py  test_single.py
artifact/: pipeline.joblib
docker/: Docker_README.md  Dockerfile.app  Dockerfile.k8s  Dockerfile.serverless  docker_requirements.txt
k8s/: deploy.yaml  deploy_image.yaml  hpa.yaml  k8s_requirements.txt  service.yaml
notebooks/: best_model_sklearn.pkl  notebook.ipynb
pipelines/: inference_pipeline.py  training_pipeline.py
serverless/: gateway.py  lambda_handler.py  serverless_requirements.txt
src/: data_prep.py  helper_cleaner.py  helper_model.py  train_prep.py
utils/: logger.py
