[project]
name = "ml-sentimenal-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "emoji>=2.15.0",
    "fastapi>=0.127.0",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "ipython>=9.8.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.8",
    "ml-dataviz>=0.1.0",
    "nltk>=3.9.2",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "svm>=0.1.0",
    "tensorflow>=2.20.0",
    "uvicorn>=0.40.0",
    "wordcloud>=1.9.4",
]
